# FaksLife

./: .gitignore  Cargo.toml  LICENSE  Notes.tex  README.md  Trunk.toml  index.html  neki.md
Pixelart/: Lan_desno.piskel  Lan_levo.piskel  ema_naravnost.piskel  lan_naravnost.piskel  tortila.piskel
Pixelart/start_screen/: Game Over.piskel  Press To Start Over.piskel  Start Game.piskel  Start Over.piskel  Start.piskel  Start_button.piskel  sunset start.piskel
Pixelart/tiles/: en_tile.piskel
Story/: Notes.tex
src/: index.html  lib.rs  main.rs  msg.rs  neki.html  update.rs  view.rs
src/models/: gamestate.rs  interactable.rs  mod.rs  npc.rs  player.rs  ui.rs
