[package]
name = "FaksLife"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[dependencies]
image = "0.25.5"


log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
sauron = "0.70.0"
wasm-bindgen = "0.2"
getrandom = { version = "0.2.12", features = ["js"] }

