[package]
name = "FaksLife"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[dependencies]
image = "0.25.5"

web-sys = { version = "0.3", features = ["Window", "HtmlAudioElement", "Document", "Element"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

# Sauron (z async)
sauron = { version = "0.70.0", features = ["with-lookup"] }

# Wasm & async
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

gloo-timers = { version = "0.3", features = ["futures"] }